--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,5 +5,43 @@
 }
 
 .form-control::placeholder {
-  color: #757575 !important;
+  color: var(--bs-secondary) !important;
+}
+
+#alert_message {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-3.75rem);
+  opacity: 0;
+  width: 100%;
+  animation: alert_message 7000ms ease-in-out 100ms;
+}
+
+#alert_message > div {
+  color: var(--bs-light);
+  text-align: center;
+  width: fit-content;
+  max-width: 500px;
+  margin-inline: auto;
+  background-color: var(--bs-primary);
+  padding: 0.75rem 1.5rem;
+  border-radius: 10px;
+}
+
+@keyframes alert_message {
+  0%,
+  0% {
+    transform: translateY(-3.75rem);
+    opacity: 0;
+  }
+  10%,
+  80% {
+    transform: translateY(3.75rem);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-3.75rem);
+    opacity: 0;
+  }
 }
